@@ -53,6 +53,8 @@ Changes in administration of the server
     * Presence information can be stored in xdb and therefore (using xdb_sql)
       in an SQL table. The stored presence information is not used by
       jabberd itself, but can be used by other applications.
+    * Messages can be dumped to xdb storage, this can be used to implement
+      logging of exchanged messages.
     * It can be configured which ciphers and versions of SSL/TLS jabberd is
       allowed to use.
 
