@@ -1,3 +1,13 @@
+2005-03-29  Matthias Wimmer  <m@tthias.net>
+
+    * jabberd/lib/jabberdlib.h: optional history storage
+    * jsm/jsm.c: same
+    * jsm/jsm.h: same
+    * jsm/sessions.c: same
+    * jsm/modules/mod_xml.c: same
+    * jsm/modules/mod_offline.c: same
+    * xdb_sql/xdb_sql.c: handling of results for inserted data (offline msgs)
+
 2005-03-19  Matthias Wimmer  <m@tthias.net>
 
     * configure.in: find openssl without pkg-config using --with-ssl-legacy
